--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Galaxy News Network</title>
+        <link rel="icon" type="image/x-icon" href="./images/gnn_favicon.png">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,11 +17,14 @@
     <header>
         <nav class="navbar anton-regular navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
+
+                <!-- Search Button -->
                 <form class="d-none d-lg-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
 
+                <!-- Navbar Brand -->
                 <a class="navbar-brand position-absolute top-50 start-50 translate-middle" href="#">
                     <div class="center">
                         <div class="rectangle1"></div>
@@ -32,10 +36,12 @@
                     </div>
                 </a>
 
+                <!-- Hamburger Icon -->
                 <button class="navbar-toggler ms-auto d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
+                <!-- navbar Collapse -->
                 <div class="collapse navbar-collapse mt-2 mt-lg-0" id="navbarSupportedContent">
                     <ul class="navbar-nav flex-row ms-auto">
                         <li class="nav-item">
@@ -51,16 +57,17 @@
     </header>
     <body class="customBackgroundColor">
         <main>
-            <div class="player border d-flex align-items-center" style="border-color: #967a7a !important;
+
+            <!-- Music Player -->
+            <div class="player border d-flex justify-content-around align-items-center" style="border-color: #967a7a !important;
                                                                         background-color: #967a7a !important;">
-                <div class="play_pause">
+                <div class="play_pause d-flex flex-row">
                     <img class="play_pause_img" src="./images/play-button.png">
-                </div>
-                <!-- <a href="https://www.flaticon.com/free-icons/play-button" title="play button icons">Play button icons created by Pixel perfect - Flaticon</a> -->
-                <div class="track_info d-flex flex-column">
-                    <h4>Now Playing</h4>
-                    <h3>Maybe</h3>
-                    <h3>The Ink Spots</h3>
+                    <div class="track_info d-flex flex-column">
+                        <h4>Now Playing:</h4>
+                        <h3>Maybe</h3>
+                        <h3>The Ink Spots</h3>
+                    </div>
                 </div>
                 <div>
                     <input type="range" class="volumeSlider" min="0" max="1" step="0.01" value="0.5">
