--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
         <link rel="stylesheet" href="./styles.css">
 
+        <script src="./scripts.js"></script>
+
     </head>
     <header>
         <nav class="navbar anton-regular navbar-expand-lg bg-body-tertiary">
@@ -61,19 +63,22 @@
             <!-- Music Player -->
             <div class="player border d-flex justify-content-around align-items-center" style="border-color: #967a7a !important;
                                                                         background-color: #967a7a !important;">
+                
+                <audio id="audioPlayer"></audio>
+
                 <!-- Play/Pause Button-->
                 <div class="play_pause">
-                    <img class="play_pause_img" src="./images/icons/play-button.png">
+                    <button id="play_pause_button"></button>
                 </div>
                 
                 <!-- Track Info -->
                 <div class="track_info d-flex flex-row align-items-center">
-                    <img class="artist_img me-2" src="./images/artists/ink_spots.jpg">
-                    <div class="track_info d-flex flex-column justify-content-around">
+                    <img id="artist_img" class="me-2" src="./images/artists/ink_spots.jpg">
+                    <div class="track_details d-flex flex-column justify-content-around">
                         <h4>Now Playing:</h4>
-                        <div class="track_name">
-                            <h3>Maybe</h3>
-                            <h3>The Ink Spots</h3>
+                        <div>
+                            <h3 id="track_title">Maybe</h3>
+                            <h3 id="track_artist">The Ink Spots</h3>
                         </div>
                     </div> 
                 </div>
