added mute button and volume slider functionality

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                 
                 <!-- Volume Slider -->
                 <div class="volume d-flex flex-row justify-content-center align-items-center">
-                    <img class="muteIcon me-2" src="./images/icons/volume.png">
-                    <input type="range" class="volumeSlider" min="0" max="1" step="0.01" value="0.5">
+                    <button id="muteButton" class="me-2"></button>
+                    <input type="range" id="volumeSlider" class="volumeSlider" min="0" max="1" step="0.01" value="0.5">
                 </div>
             </div>
         </main>
