made player more responsive

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
                 </div>
                 
                 <!-- Track Info -->
-                <div class="track_info d-flex flex-row align-items-center">
+                <div class="track_info flex-nowrap d-flex flex-row align-items-center">
                     <img id="artist_img" class="me-2" src="./images/artists/ink_spots.jpg">
                     <div class="track_details d-flex flex-column justify-content-around">
                         <h4>Now Playing:</h4>
                         <div>
-                            <h3 id="track_title">Maybe</h3>
-                            <h3 id="track_artist">The Ink Spots</h3>
+                            <h3 id="track_title" class="ellipsis">Maybe</h3>
+                            <h3 id="track_artist" class="ellipsis">The Ink Spots</h3>
                         </div>
                     </div> 
                 </div>
