added adverts changed hader and added mute button functionality

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
         <nav class="navbar anton-regular navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
 
-                <!-- Search Button -->
-                <form class="d-none d-lg-flex" role="search">
+                <a class="navbar-brand ms-5">GALAXY NEWS NETWORK <span class="ms-2" style="font-size: small; font-weight: lighter;">Washington D.C.</span></a>
+
+                <!-- Search Button -->  
+                <!-- <form class="d-none d-lg-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="">
                     <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+                </form> -->
 
                 <!-- Navbar Brand -->
                 <a class="navbar-brand position-absolute top-50 start-50 translate-middle" href="#">
@@ -125,6 +127,13 @@
                         </div>
                     </div>
 
+                    <div>
+                        <div class="d-flex flex-row m-3">
+                            <img src="./images/adverts/mans_best_friend.jpg" class="justify-content-center mx-auto" style="height: 250px;">
+                            <img src="./images/adverts/cherry_bomb.jpg" class="justify-content-center mx-auto" style="height: 250px;">
+                        </div>
+                    </div>
+
                     <!-- Articles -->
                     <div class="card-group col-12 gap-3 d-flex flex-column flex-md-row justify-content-between mt-3">
                         <div class="card w-100 d-flex flex-row flex-md-column">
@@ -214,7 +223,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
     </body>
    
-    <!-- Placeholder footer delete later!! -->
     <footer class="bg-dark text-light py-4 mt-auto">
 
     </footer>
