made adverts responsive

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <nav class="navbar anton-regular navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
 
-                <a class="navbar-brand ms-5">GALAXY NEWS NETWORK <span class="ms-2" style="font-size: small; font-weight: lighter;">Washington D.C.</span></a>
+                <a class="navbar-brand ms-4 d-none d-lg-block">GALAXY NEWS NETWORK
+                    <span class="ms-2" style="font-size: small; font-weight: lighter;">Washington D.C.</span>
+                </a>
 
                 <!-- Search Button -->  
                 <!-- <form class="d-none d-lg-flex" role="search">
@@ -129,8 +131,8 @@
 
                     <div>
                         <div class="d-flex flex-row m-3">
-                            <img src="./images/adverts/mans_best_friend.jpg" class="justify-content-center mx-auto" style="height: 250px;">
-                            <img src="./images/adverts/cherry_bomb.jpg" class="justify-content-center mx-auto" style="height: 250px;">
+                            <img src="./images/adverts/mans_best_friend.jpg" class="col-7 me-2 justify-content-center img-fluid mx-auto">
+                            <img src="./images/adverts/cherry_bomb.jpg" class="col-5 justify-content-center img-fluid mx-auto">
                         </div>
                     </div>
 
