--- a/index.html
+++ b/index.html
@@ -68,18 +68,41 @@
     <body class="customBackgroundColor">
         <main>
             <container class="col-12 col-lg-10 d-flex mx-auto flex-column justify-content-lg-center flex-lg-row">
-                <div id="articles_container" class="order-lg-0 px-3 px-lg-0 pb-3 col-12 col-lg-11">
+                <div id="articles_container" class="order-lg-0 px-3 px-lg-0 pb-3 col-12 col-lg-11"> 
                     
-                    <div class="card mt-5 d-flex">
-                        <div class="justify-content-center mx-auto text-center">
-                            <h5 class="mb-3">🌤 Weather</h5>
-                            <p class="text-muted">Loading current weather...</p>
-                            <!-- Optional placeholder icons/info -->
-                            <div class="d-flex justify-content-center align-items-center">
-                                <i class="text-primary"></i>
-                                <div>
-                                <strong>--°C</strong><br>
-                                <small class="text-muted">City, Country</small>
+                    <!-- Weather -->
+                    <div class="card shadow col-10 mx-auto mt-5 d-flex">
+                        <div class="w-100 d-flex flex-column justify-content-between mx-auto">
+                            <h5 class="mb-3 text-center">🌤 Weather</h5>
+                            <div class="w-100 d-flex justify-content-around flex-row mx-auto text-center">
+                                <!-- Optional placeholder icons/info -->
+                                <div class="d-flex justify-content-center align-items-center">
+                                    <i class="text-primary"></i>
+                                    <div>
+                                    <strong>--°C</strong><br>
+                                    <small class="text-muted">City, Country</small>
+                                    </div>
+                                </div>
+                                <div class="d-flex justify-content-center align-items-center">
+                                    <i class="text-primary"></i>
+                                    <div>
+                                    <strong>--°C</strong><br>
+                                    <small class="text-muted">City, Country</small>
+                                    </div>
+                                </div>
+                                <div class="d-flex justify-content-center align-items-center">
+                                    <i class="text-primary"></i>
+                                    <div>
+                                    <strong>--°C</strong><br>
+                                    <small class="text-muted">City, Country</small>
+                                    </div>
+                                </div>
+                                <div class="d-flex justify-content-center align-items-center">
+                                    <i class="text-primary"></i>
+                                    <div>
+                                    <strong>--°C</strong><br>
+                                    <small class="text-muted">City, Country</small>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -87,13 +110,13 @@
                     
                     <!-- Featured Article -->
                     <div id="featured_container" class="mt-3">
-                        <div class="card ellipsis" style="height: 250px; text-wrap: wrap;">
+                        <div class="card shadow ellipsis" style="height: 250px; text-wrap: wrap;">
                             <div class="d-flex no-gutters">
                                 <div class="col-6 col-md-6">
                                     <div class="card-body">
                                         <p class="card-text" style="color: red; background-color: aquamarine;"><small class="text-muted"></small>Breaking News</p>
-                                        <h5 class="card-title">Chinese Invasion of Anchorage, Alaska</h5>
-                                        <p class="card-text">In a shocking turn of events, Chinese forces have launched a full-scale invasion of Anchorage, Alaska, sparking fierce battles across the region. Experts fear this could be the beginning of a wider conflict in the Arctic, with global implications for national security and the balance of power.</p>
+                                        <h5 class="card-title" style="font-size: x-large;">Chinese Invasion of Anchorage, Alaska</h5>
+                                        <p class="card-text">In a shocking turn of events, Chinese forces have launched a full-scale invasion of Anchorage, Alaska. Experts fear this could be the beginning of a wider conflict in the Arctic, with global implications.</p>
                                     </div>
                                 </div>
                                 <img src="./images/article_images/alaska_invasion.webp" class="col-6 col-md-6" style="height: 250px;" alt="">
@@ -103,7 +126,7 @@
 
                     <!-- Articles -->
                     <div class="card-group col-12 gap-3 d-flex flex-column flex-md-row justify-content-between mt-3">
-                        <div class="card w-100 d-flex flex-row flex-md-column">
+                        <div class="card shadow w-100 d-flex flex-row flex-md-column">
                             <img src="./images/article_images/mr_handy.webp" class="col-6 col-md-12 order-1 order-md-0" alt="">
                             <div class="card-body order-0 order-md-1 col-6 col-md-12">
                                 <p class="card-text"><small class="text-muted"></small>Science & Tech</p>
@@ -112,7 +135,7 @@
                             </div>
                         </div>
 
-                        <div class="card w-100 d-flex flex-row flex-md-column">
+                        <div class="card shadow w-100 d-flex flex-row flex-md-column">
                             <img src="./images/article_images/nuclear_fusion.webp" class="col-6 col-md-12 order-1 order-md-0" alt="">
                             <div class="card-body order-0 order-md-1 col-6 col-md-12">
                                 <p class="card-text"><small class="text-muted"></small>Science & Tech</p>
@@ -121,7 +144,7 @@
                             </div>
                         </div>
 
-                        <div class="card w-100 d-flex flex-row flex-md-column">
+                        <div class="card shadow w-100 d-flex flex-row flex-md-column">
                             <img src="./images/article_images/nuka_cola_quantum.webp" class="col-6 col-md-12 order-1 order-md-0" alt="">
                             <div class="card-body order-0 order-md-1 col-6 col-md-12">
                                 <p class="card-text"><small class="text-muted"></small>Lifestyle & Culture</p>
@@ -130,7 +153,7 @@
                             </div>
                         </div>
 
-                        <div class="card w-100 d-flex flex-row flex-md-column">
+                        <div class="card shadow w-100 d-flex flex-row flex-md-column">
                             <img src="./images/article_images/vault_76.png" class="col-6 col-md-12 order-1 order-md-0" alt="">
                             <div class="card-body order-0 order-md-1 col-6 col-md-12">
                                 <p class="card-text"><small class="text-muted"></small>Lifestyle & Culture</p>
@@ -149,7 +172,7 @@
 
                     <!-- Articles -->
                     <div class="card-group col-12 gap-3 d-flex flex-column flex-md-row justify-content-between mt-3">
-                        <div class="card w-100 d-flex flex-row flex-md-column">
+                        <div class="card shadow w-100 d-flex flex-row flex-md-column">
                             <img src="./images/article_images/silver_shroud.avif" class="col-6 col-md-12 order-1 order-md-0" alt="">
                             <div class="card-body order-0 order-md-1 col-6 col-md-12">
                                 <p class="card-text"><small class="text-muted"></small>Entertainment</p>
@@ -158,7 +181,7 @@
                             </div>
                         </div>
 
-                        <div class="card w-100 d-flex flex-row flex-md-column">
+                        <div class="card shadow w-100 d-flex flex-row flex-md-column">
                             <img src="./images/article_images/nuka_world.jpg" class="col-6 col-md-12 order-1 order-md-0" alt="">
                             <div class="card-body order-0 order-md-1 col-6 col-md-12">
                                 <p class="card-text"><small class="text-muted"></small>Entertainment</p>
@@ -167,7 +190,7 @@
                             </div>
                         </div>
 
-                        <div class="card w-100 d-flex flex-row flex-md-column">
+                        <div class="card shadow w-100 d-flex flex-row flex-md-column">
                             <img src="./images/article_images/nuclear_war.png" class="col-6 col-md-12 order-1 order-md-0" alt="">
                             <div class="card-body order-0 order-md-1 col-6 col-md-12">
                                 <p class="card-text"><small class="text-muted"></small>World Affairs</p>
@@ -176,7 +199,7 @@
                             </div>
                         </div>
 
-                        <div class="card w-100 d-flex flex-row flex-md-column">
+                        <div class="card shadow w-100 d-flex flex-row flex-md-column">
                             <img src="./images/article_images/las_vegas.jpg" class="col-6 col-md-12 order-1 order-md-0" alt="">
                             <div class="card-body order-0 order-md-1 col-6 col-md-12">
                                 <p class="card-text"><small class="text-muted"></small>Business & Economy</p>
