--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 
                     <!-- Articles -->
                     <div class="card-group col-12 gap-3 d-flex flex-column flex-md-row justify-content-between mt-3">
-                        <div class="card shadow w-100 d-flex flex-row flex-md-column">
-                            <a href="./mr_handy.html" style="text-decoration: none; color: inherit;">
+                        <div class="card shadow w-100">
+                            <a href="./mr_handy.html" class="d-flex flex-row flex-md-column" style="text-decoration: none; color: inherit;">
                                 <img src="./images/article_images/mr_handy.webp" class="col-6 col-md-12 order-1 order-md-0" alt="">
                                 <div class="card-body order-0 order-md-1 col-6 col-md-12">
                                     <p class="card-text main-card-p"><small class="text-muted"></small>Science & Tech</p>
@@ -139,8 +139,8 @@
                             </a>
                         </div>
 
-                        <div class="card shadow w-100 d-flex flex-row flex-md-column">
-                            <a href="./mass_fusion.html" style="text-decoration: none; color: inherit;">
+                        <div class="card shadow w-100">
+                            <a href="./mass_fusion.html" class="d-flex flex-row flex-md-column" style="text-decoration: none; color: inherit;">
                                 <img src="./images/article_images/nuclear_fusion.webp" class="col-6 col-md-12 order-1 order-md-0" alt="">
                                 <div class="card-body order-0 order-md-1 col-6 col-md-12">
                                     <p class="card-text main-card-p"><small class="text-muted"></small>Science & Tech</p>
@@ -150,8 +150,8 @@
                             </a>
                         </div>
 
-                        <div class="card shadow w-100 d-flex flex-row flex-md-column">
-                            <a href="./nuka_quantum.html" style="text-decoration: none; color: inherit;">
+                        <div class="card shadow w-100">
+                            <a href="./nuka_quantum.html" class="d-flex flex-row flex-md-column" style="text-decoration: none; color: inherit;">
                                 <img src="./images/article_images/nuka_cola_quantum.webp" class="col-6 col-md-12 order-1 order-md-0" alt="">
                                 <div class="card-body order-0 order-md-1 col-6 col-md-12">
                                     <p class="card-text main-card-p"><small class="text-muted"></small>Lifestyle & Culture</p>
@@ -161,8 +161,8 @@
                             </a>
                         </div>
 
-                        <div class="card shadow w-100 d-flex flex-row flex-md-column">
-                            <a href="./vault_76.html" style="text-decoration: none; color: inherit;">
+                        <div class="card shadow w-100">
+                            <a href="./vault_76.html" class="d-flex flex-row flex-md-column" style="text-decoration: none; color: inherit;">
                                 <img src="./images/article_images/vault_76.png" class="col-6 col-md-12 order-1 order-md-0" alt="">
                                 <div class="card-body order-0 order-md-1 col-6 col-md-12">
                                     <p class="card-text main-card-p"><small class="text-muted"></small>Lifestyle & Culture</p>
@@ -182,8 +182,8 @@
 
                     <!-- Articles -->
                     <div class="card-group col-12 gap-3 d-flex flex-column flex-md-row justify-content-between mt-3">
-                        <div class="card shadow w-100 d-flex flex-row flex-md-column">
-                            <a href="./silver_shroud.html" style="text-decoration: none; color: inherit;">
+                        <div class="card shadow w-100">
+                            <a href="./silver_shroud.html" class="d-flex flex-row flex-md-column" style="text-decoration: none; color: inherit;">
                                 <img src="./images/article_images/silver_shroud.avif" class="col-6 col-md-12 order-1 order-md-0" alt="">
                                 <div class="card-body order-0 order-md-1 col-6 col-md-12">
                                     <p class="card-text main-card-p"><small class="text-muted"></small>Entertainment</p>
@@ -193,8 +193,8 @@
                             </a>
                         </div>
 
-                        <div class="card shadow w-100 d-flex flex-row flex-md-column">
-                            <a href="./nuka_world.html" style="text-decoration: none; color: inherit;">
+                        <div class="card shadow w-100">
+                            <a href="./nuka_world.html" class="d-flex flex-row flex-md-column" style="text-decoration: none; color: inherit;">
                                 <img src="./images/article_images/nuka_world.jpg" class="col-6 col-md-12 order-1 order-md-0" alt="">
                                 <div class="card-body order-0 order-md-1 col-6 col-md-12">
                                     <p class="card-text main-card-p"><small class="text-muted"></small>Entertainment</p>
@@ -204,8 +204,8 @@
                             </a>
                         </div>
 
-                        <div class="card shadow w-100 d-flex flex-row flex-md-column">
-                            <a href="./tensions_rise.html" style="text-decoration: none; color: inherit;">
+                        <div class="card shadow w-100">
+                            <a href="./tensions_rise.html" class="d-flex flex-row flex-md-column" style="text-decoration: none; color: inherit;">
                                 <img src="./images/article_images/nuclear_war.png" class="col-6 col-md-12 order-1 order-md-0" alt="">
                                 <div class="card-body order-0 order-md-1 col-6 col-md-12">
                                     <p class="card-text main-card-p"><small class="text-muted"></small>World Affairs</p>
@@ -215,8 +215,8 @@
                             </a>
                         </div>
 
-                        <div class="card shadow w-100 d-flex flex-row flex-md-column">
-                            <a href="./mr_house.html" style="text-decoration: none; color: inherit;">
+                        <div class="card shadow w-100">
+                            <a href="./mr_house.html" class="d-flex flex-row flex-md-column" style="text-decoration: none; color: inherit;">
                                 <img src="./images/article_images/las_vegas.jpg" class="col-6 col-md-12 order-1 order-md-0" alt="">
                                 <div class="card-body order-0 order-md-1 col-6 col-md-12">
                                     <p class="card-text main-card-p"><small class="text-muted"></small>Business & Economy</p>
